fix: resize on mobile device

--- a/fe/src/assets/css/global.css
+++ b/fe/src/assets/css/global.css
@@ -15,7 +15,8 @@ body {
 
 .swiper-button-prev,
 .swiper-button-next {
-  color: black !important;
+  color: white !important;
+  transform: scale(0.6);
 }
 
 .grid {
@@ -32,6 +33,11 @@ body {
 @media (min-width: 768px) {
   .grid {
     max-width: 768px;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    transform: scale(1);
   }
 }
 
