--- a/fe/src/component/User/Slideshow/slideshow.module.css
+++ b/fe/src/component/User/Slideshow/slideshow.module.css
@@ -16,6 +16,3 @@ img {
     height: 100%;
   }
 }
-
-@media (min-width: 1140px) {
-}
